@@ -1,13 +1,19 @@
+import warnings
+
 from django.contrib.sitemaps import Sitemap as DjangoSitemap
+
+from wagtail.core.utils import accepts_kwarg
+from wagtail.utils.deprecation import RemovedInWagtail24Warning
 
 
 class Sitemap(DjangoSitemap):
 
-    def __init__(self, site=None):
+    def __init__(self, site=None, request=None):
         self.site = site
+        self.request = request
 
     def location(self, obj):
-        return obj.url
+        return obj.get_full_url(self.request)
 
     def lastmod(self, obj):
         # fall back on latest_revision_created_at if last_published_at is null
@@ -29,7 +35,18 @@ class Sitemap(DjangoSitemap):
         last_mods = set()
 
         for item in self.paginator.page(page).object_list:
-            for url_info in item.get_sitemap_urls():
+
+            if not accepts_kwarg(item.get_sitemap_urls, 'request'):
+                warnings.warn(
+                    "%s.get_sitemap_urls() must be updated to accept an optional "
+                    "'request' keyword argument" % type(item).__name__,
+                    category=RemovedInWagtail24Warning)
+
+                url_info_items = item.get_sitemap_urls()
+            else:
+                url_info_items = item.get_sitemap_urls(self.request)
+
+            for url_info in url_info_items:
                 urls.append(url_info)
                 last_mods.add(url_info.get('lastmod'))
 
